Fix event dates in championship articles on mobile (#657)
* Fix event dates breaking in too-small championship match cards.

--- a/sass/_tables.sass
+++ b/sass/_tables.sass
@@ -94,6 +94,7 @@ ul.column-rule
 
     .n, .ed
       text-align: right
+      break-inside: avoid
 
     .nt
       display: block
@@ -150,7 +151,7 @@ ul.column-rule
 
     .match, .header
       display: grid
-      grid-template-columns: subgrid
+      grid-template-columns: minmax(8em, 1fr) 3fr
       grid-template-rows: auto
       grid-column: span 2
       column-gap: 0.3em
@@ -158,6 +159,9 @@ ul.column-rule
 
       .p, .c
         grid-column: 2
+
+      .ed
+        break-inside: avoid
 
 details[open] + .card
     display: none
